kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudscale
  labels:
    app.kubernetes.io/part-of: cloudscale
    istio-injection: enabled
